# VectoriserMe

./: DEPLOYMENT.md  README.md  REQUIREMENTS_VERIFICATION.md  next.config.js  package.json  tailwind.config.js  todo.md
api/: index.js
backend/: Dockerfile  README.md  render.yaml
backend/server/: Cargo.toml  README.md
backend/server/src/: handlers.rs  main.rs  models.rs  utils.rs  vectorizer.rs
components/: BatchDownloadPanel.js  BeforeAfterSlider.js  ComparisonModal.js  ContactForm.js  ConversionProgress.js  DownloadPanel.js  EnhancedSettingsPanel.js  EnhancedUploadArea.js  FileList.js  Footer.js  Header.js  PreviewModal.js
components/i18n/: LanguageContext.js  LanguageSelector.js  TranslatedText.js  translations.js
lib/: api.js  download.js
pages/: _app.js  contact.js  cookies.js  editor.js  faq.js  index.js  privacy.js  terms.js
styles/: animations.css  globals.css
