[package]
name = "vectorise-me-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
image = "0.24.6"
vtracer = "0.5.1"
tempfile = "3.5.0"
sanitize-filename = "0.4.0"
chrono = "0.4.24"
thiserror = "1.0.40"
zip = "0.6.4"
walkdir = "2.3.3"
